# flask-fastapi-webapp

./: PAGINATION_UPDATE.md  README.md  architecture.md  check_status.sh  concepts.md  documentation.md  implementation.md  init_sample_data.py  main.py  pyproject.toml  run_all.sh  run_backend.sh  run_frontend.sh  test_servers.sh
fastapi-backend/: README.md  main.py  pyproject.toml  requirements.txt  run.sh  student_enrollment.db  test_api.py  test_pagination.py
fastapi-backend/app/: DATABASE_MODELS.md  __init__.py  config.py  database.py  example_usage.py  init_db.py  models.py  schemas.py
flask-frontend/: .env  .env.example  AUTHENTICATION_REMOVED.md  ENROLLMENT_FEATURES.md  README.md  api_client.py  app.py  pyproject.toml  run.py  test_no_auth.py
flask-frontend/app_package/: __init__.py
flask-frontend/app_package/auth/: __init__.py
flask-frontend/app_package/routes/: __init__.py  courses.py  enrollments.py  students.py  students_backup.py
flask-frontend/static/css/: style.css
flask-frontend/static/js/: main.js
flask-frontend/templates/: base.html  index.html
flask-frontend/templates/auth/: login.html  register.html
flask-frontend/templates/courses/: create.html  detail.html  edit.html  form.html  index.html  list.html  view.html
flask-frontend/templates/enrollments/: course.html  index.html  student.html
flask-frontend/templates/errors/: 404.html  500.html
flask-frontend/templates/students/: create.html  edit.html  enrollments.html  form.html  index.html  list.html  view.html
